--- a/src/components/Header/styles.css
+++ b/src/components/Header/styles.css
@@ -51,12 +51,21 @@
   color: #FFFFFF;
 }
 
+.content{
+  margin-left: 200px;
+  padding: 1px 16px;
+}
+
 /* Mobile com largura de 700px*/
 @media  screen and (max-width: 700px){
   .sidebar{
     width: 100%;
     height: auto;
     position: relative;
+  }
+
+  div.content{
+    margin-left: 0;
   }
 
   .sidebar a{
