--- a/src/pages/Profile/styles.css
+++ b/src/pages/Profile/styles.css
@@ -1,1 +1,12 @@
 /*Estilização Profile*/
+
+.content{
+  margin-left: 200px;
+  padding: 1px 16px;
+}
+
+@media screen and (max-width: 700px){
+  .content{
+    margin-left: 0;
+  }
+}
