Estilização da página Novo Chamado

--- a/src/pages/New/styles.css
+++ b/src/pages/New/styles.css
@@ -14,3 +14,7 @@ form input[type="radio"]:not(:first-child) {
   padding-left: .5em;
   font-size: 1.2em;
 }
+
+.complemento{
+  margin-top: 10px;
+}
